--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "bundle/vim-speeddating"]
 	path = bundle/vim-speeddating
 	url = https://github.com/tpope/vim-speeddating.git
+[submodule "bundle/sieve.vim"]
+	path = bundle/sieve.vim
+	url = https://github.com/vim-scripts/sieve.vim
