--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,9 @@
 [submodule "pack/submodules/opt/vim-solarized8"]
 	path = pack/submodules/opt/vim-solarized8
 	url = https://github.com/lifepillar/vim-solarized8.git
+[submodule "pack/submodules/start/vim-airline"]
+	path = pack/submodules/start/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
+[submodule "pack/submodules/start/vim-airline-themes"]
+	path = pack/submodules/start/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
