--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "pack/submodules/start/vim-airline-themes"]
 	path = pack/submodules/start/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
+[submodule "pack/submodules/start/ctrlp.vim"]
+	path = pack/submodules/start/ctrlp.vim
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
