--- a/.gitmodules
+++ b/.gitmodules
@@ -58,12 +58,12 @@
 [submodule "pack/submodules/opt/vim-solarized8"]
 	path = pack/submodules/opt/vim-solarized8
 	url = https://github.com/lifepillar/vim-solarized8.git
-[submodule "pack/submodules/start/vim-airline"]
-	path = pack/submodules/start/vim-airline
-	url = https://github.com/vim-airline/vim-airline.git
-[submodule "pack/submodules/start/vim-airline-themes"]
-	path = pack/submodules/start/vim-airline-themes
-	url = https://github.com/vim-airline/vim-airline-themes.git
 [submodule "pack/submodules/start/ctrlp.vim"]
 	path = pack/submodules/start/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "pack/submodules/start/lightline.vim"]
+	path = pack/submodules/start/lightline.vim
+	url = https://github.com/itchyny/lightline.vim.git
+[submodule "pack/submodules/start/vim-fugitive"]
+	path = pack/submodules/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
