--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "pack/submodules/start/vim-jsonc"]
 	path = pack/submodules/start/vim-jsonc
 	url = https://github.com/kevinoid/vim-jsonc.git
+[submodule "pack/submodules/start/nerdtree"]
+	path = pack/submodules/start/nerdtree
+	url = https://github.com/preservim/nerdtree.git
